--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>medtales</title>
+  <title>Medtales</title>
   <link rel="shortcut icon" type="image/favicon" href="img/favicon.png"/>
   <link rel="stylesheet" href="content/css/boostrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="content/css/MalihuCustomScrollbar.min.css">
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="content/css/main.min.css">
   <link rel="stylesheet" href="content/css/tam.css">
   <link rel="stylesheet" href="content/css/tinbui.css">
+  <link rel="stylesheet" href="content/css/giang.css">
 </head>
 <body>
     
